--- a/server/vercel.json
+++ b/server/vercel.json
@@ -8,8 +8,8 @@
     ],
     "routes": [
       {
-        "src": "/compare/(.*)",
-        "dest": "./index.js",
+        "src": "/(.*)",
+        "dest": "/",
         "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
         "headers": {
           "Access-Control-Allow-Origin": "*"
