--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+OPENAI_API_KEY = "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"
 process.env.MYSQL_HOST = '127.0.0.1'
 process.env.MYSQL_USER = 'root'
 process.env.MYSQL_PASSWORD = 'Idanoam123!'
