--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.2",
     "express": "^4.18.2",
+    "mssql": "^10.0.2",
     "mysql2": "^3.9.1",
     "openai": "^4.27.0"
   }
